@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.13.2.4 2002/05/24 19:36:29 hobbs Exp $
+# RCS: @(#) $Id: clock.test,v 1.13.2.5 2002/07/05 13:14:25 rmax Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -112,6 +112,14 @@ test clock-3.11 {clock format tests} {
 test clock-3.12 {clock format tests} {
     clock format 123 -format ""
 } ""
+test clock-3.13 {clock format with non-ASCII character in the format string} {
+    set oldenc [encoding system] 
+    encoding system iso8859-1
+    set res [clock format 0 -format \u00c4]
+    encoding system $oldenc
+    unset oldenc
+    set res
+} "\u00c4"
 
 # clock scan
 test clock-4.1 {clock scan tests} {
